[DTSSTCI-1762] fix tests